[gd_scene load_steps=9 format=3 uid="uid://5iurrb07epis"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ueh2c"]
[ext_resource type="PackedScene" uid="uid://bqpwh2qhltcpn" path="res://Scenes/Rifle.tscn" id="2_kpw2n"]
[ext_resource type="PackedScene" uid="uid://cvxonb5tocae2" path="res://Scenes/SteampunkAuto.tscn" id="2_nwejs"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xc2g5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sbgyl"]

[sub_resource type="Animation" id="Animation_fby5b"]
resource_name = "LowerAuto"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SteampunkAuto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.15, -0.28, -0.38), Vector3(0.15, -1, -0.38)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SteampunkAuto:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.29, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_0xmlf"]
resource_name = "LowerPistols"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.2, -0.266, -0.543), Vector3(0.2, -1, -0.543)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rifle2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.2, -0.266, -0.543), Vector3(-0.2, -1, -0.543)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rifle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.29, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rifle2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.29, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smhxs"]
_data = {
"LowerAuto": SubResource("Animation_fby5b"),
"LowerPistols": SubResource("Animation_0xmlf")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7)
floor_max_angle = 1.0472
script = ExtResource("1_ueh2c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_xc2g5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sbgyl")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, -2.72637e-41, -2.84217e-14, 0, 1, -9.59255e-28, 2.84217e-14, 9.59255e-28, 1, 0, 0, 0)
current = true

[node name="SteampunkAuto" parent="Head/Camera3D" instance=ExtResource("2_nwejs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, -0.28, -0.38)

[node name="Rifle" parent="Head/Camera3D" instance=ExtResource("2_kpw2n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -1, -0.543)
visible = false

[node name="Rifle2" parent="Head/Camera3D" instance=ExtResource("2_kpw2n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, -1, -0.543)
visible = false

[node name="AimRay" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
target_position = Vector3(0, 0, -100)
collision_mask = 2
collide_with_areas = true

[node name="AimRayEnd" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101.5)

[node name="WeaponSwitching" type="AnimationPlayer" parent="Head/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_smhxs")
}
